Implementado método excluir

--- a/views/listarUsuarios.ejs
+++ b/views/listarUsuarios.ejs
@@ -44,7 +44,7 @@
                 </form>
               </div>
               <div>
-                <form action="" method="">
+                <form action="/excluir" method="post">
                   <input type="text" hidden name="id" value="<%= item.id %>">
                   <button >Excluir</button>
                 </form>
